2007-07-02  Kurt Maute	<kurt@maute.us>
	The following updated provided by Maurice van der Pot <griffon26@kfk4ever.com>
	* configure.in:  escape newlines in ALL_LINGUAS
	* data/stylesheets/html1_css_ie.xsl
	* data/stylesheets/html1_css.xsl
	* data/stylesheets/html1_gantt.xsl
	* data/stylesheets/Makefile.am
	* data/stylesheets/planner2html.xsl - fix layout of gantt chart in
	HTML export (headers not aligned with gantt bars) per bug #393620

2007-06-11  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

        * configure.in: Added 'zh_HK' to ALL_LINGUAS.

2007-04-12  Gintautas Miliauskas  <gintas@akl.lt>

	* configure.in: Added 'lt' to ALL_LINGUAS.

2007-03-13  Kurt Maute	<kurt@maute.us>
	* planner-gantt-chart.c
	* planner-gantt-chart.h
	* planner-gantt-view.c:
	Store 'Show Guide Lines' setting in gconf - contributed by Marie
	Durand <marie.durand@teamlog.com>

2007-02-05  Matic Zgur <mr.zgur@gmail.com>

	* configure.in: Added 'sl' to ALL_LINGUAS.

2007-01-03 Jordi Mas i Hernàndez <jordimash@gmail.com>

	* planner-gantt-view.c: adds mouse wheel support to
	to the gannt view.
	* planner-usage-view.c: adds mouse wheel support to
	to the usage view.

2007-01-02 Jordi Mas i Hernàndez <jordimash@gmail.com>

	* libplanner/mrp-task-manager.c: fixes bug #372694

2006-12-27 Jordi Mas i Hernàndez <jordimash@gmail.com>

	*  planner-html-plugin.c: fixes bug #388454. We were freeing a 
	memory block that was already free.

2006-12-27 Jordi Mas i Hernàndez <jordimash@gmail.com>

	* data/stylesheets/html1_gantt.xsl: I18N for strings and dates 
	* data/stylesheets/html1_resources.xsl: I18N for strings and dates
	* data/stylesheets/html1_tasks.xsl: I18N for strings and dates
	* data/stylesheets/planner2html.xsl: I18N for strings and dates
	* libplanner/mrp-xsl.c: Add I18N support for HTML export
	* po/POTFILES.in: Adds localizable.xml
	* data/stylesheets/localizable.xml: New strings to localise

2006-12-14 Kurt Maute <Kurt@Maute.us>