@@ -1,5 +1,10 @@
+2007-07-15  Kurt Maute  <kurt@maute.us>
+	The following update provided by Maurice van der Pot <griffon26@kfk4ever.com>
+	* src/planner-gantt-row.c  - allow dragging the completion bar in the
+	gantt chart
+
 2007-07-02  Kurt Maute	<kurt@maute.us>
-	The following updated provided by Maurice van der Pot <griffon26@kfk4ever.com>
+	The following update provided by Maurice van der Pot <griffon26@kfk4ever.com>
 	* configure.in:  escape newlines in ALL_LINGUAS
 	* data/stylesheets/html1_css_ie.xsl
 	* data/stylesheets/html1_css.xsl
